feat: add basic download support
fix: hotfix

fix: hotfix
